kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: django-prod
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
