kubernetes/deployment-db.yml
apiVersion: v1
kind: Namespace
metadata:
  name: django-prod

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: django-prod
spec:
  serviceName: postgres   # Headless service name (IMPORTANT)
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: postgres
#   namespace: django-prod
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgres
#   template:
#     metadata:
#       labels:
#         app: postgres
#     spec:
#       containers:
#         - name: postgres
#           image: postgres:15
#           ports:
#             - containerPort: 5432
#           envFrom:
#             - secretRef:
#                 name: postgres-secret
#           env:
#             - name: PGDATA
#               value: /var/lib/postgresql/data/pgdata

#           volumeMounts:
#             - name: postgres-storage
#               mountPath: /var/lib/postgresql/data
#           resources:
#             requests:
#               cpu: "250m"
#               memory: "512Mi"
#             limits:
#               cpu: "250m"
#               memory: "512Mi"

#       # ✅ FIXED indentation (VERY IMPORTANT)
#       volumes:
#         - name: postgres-storage
#           #hostPath:
#           #path: /home/raj/data 
#           persistentVolumeClaim:
#             claimName: postgres-pvc

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-service
#   namespace: django-prod
# spec:
#   selector:
#     app: postgres
#   ports:
#     - port: 5432
#       targetPort: 5432

---
# create a headless service for the StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: django-prod
spec:
  clusterIP: None   # Headless
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
