kubernetes/postgres-statefullset.yml
# create a headless service for the StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: django-prod
spec:
  clusterIP: None   # Headless
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: django-prod
spec:
  serviceName: postgres   # Headless service name (IMPORTANT)
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
